src/test/deca/syntax/invalid/provided/Print_Majuscule.deca
// lexical: token print non reconnu . Donc print reconnu comme STRING

// syntaxe: marche pas + il y a pas de regle specifique
// pour {String...


{ Print(" hhh mn nytek ");}
